fix: fixed building of a routes registration info @cf_skip